--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@types/react": "^18.2.32",
     "@types/react-dom": "^18.2.14",
     "autoprefixer": "^10.4.16",
+    "clsx": "^2.1.1",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
-    "framer-motion": "^10.12.16",
+    "framer-motion": "^10.18.0",
     "next": "^13.5.6",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.31",
@@ -26,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "swiper": "^9.3.2",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
   }
