--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.107.0",
+    "@react-three/fiber": "^8.16.8",
     "@types/bcrypt": "^5.0.1",
     "@types/node": "^20.8.9",
     "@types/react": "^18.2.32",
@@ -29,6 +31,8 @@
     "swiper": "^9.3.2",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.3.5",
+    "three": "^0.165.0",
+    "three-globe": "^2.31.0",
     "typescript": "^5.2.2"
   }
 }
