--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "framer-motion": "^11.2.11",
-    "next": "^13.5.6",
+    "next": "^14.2.4",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
@@ -38,6 +38,7 @@
     "tailwindcss": "^3.3.5",
     "three": "^0.165.0",
     "three-globe": "^2.31.0",
+    "tsparticles": "^3.4.0",
     "typescript": "^5.2.2"
   }
 }
