--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "sass": "^1.77.6",
+    "styled-components": "^6.1.11",
     "swiper": "^9.3.2",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.3.5",
