--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "framer-motion": "^11.2.11",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "^13.5.6",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.31",
