--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "export": "next build && next export", 
+    "export": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
@@ -24,6 +24,8 @@
     "clsx": "^2.1.1",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "flowbite": "^2.3.0",
+    "flowbite-react": "^0.10.1",
     "framer-motion": "^11.2.11",
     "mini-svg-data-uri": "^1.4.4",
     "next": "^13.5.6",
@@ -34,6 +36,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "recoil": "^0.7.7",
     "sass": "^1.77.6",
     "styled-components": "^6.1.11",
     "swiper": "^9.3.2",
