--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "eslint-config-next": "13.4.4",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.10.1",
-    "framer-motion": "^11.2.11",
+    "framer-motion": "^11.2.12",
     "mini-svg-data-uri": "^1.4.4",
     "next": "^13.5.6",
     "next-themes": "^0.2.1",
@@ -38,6 +38,7 @@
     "react-hot-toast": "^2.4.1",
     "recoil": "^0.7.7",
     "sass": "^1.77.6",
+    "simplex-noise": "^4.0.1",
     "styled-components": "^6.1.11",
     "swiper": "^9.3.2",
     "tailwind-merge": "^2.3.0",
